[package]
name = "CLImate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
rand = "0.8.3"
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15.0", features = ["full"] }

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["crossterm-backend"]